# match_student_code

./: .gitignore  .gitmodules  README.md
student_code/000_ExampleFolder/: README.md
student_code/001_UltrasoundBasedLocalization/: README.md
student_code/002_SplinedVoronoiPlanner/: README.md
student_code/002_SplinedVoronoiPlanner/pure_voronoi_planner/: CMakeLists.txt  README.md  package.xml  pure_voronoi_planner_plugin.xml
student_code/002_SplinedVoronoiPlanner/pure_voronoi_planner/config/: PureVoronoiPlanner.cfg  pure_voronoi_planner_params.yaml
student_code/002_SplinedVoronoiPlanner/pure_voronoi_planner/include/pure_voronoi_planner/: boost_voronoi.h  dynamicvoronoi_interface.h  planning_utils.h  pure_voronoi_planner.h
student_code/002_SplinedVoronoiPlanner/pure_voronoi_planner/include/pure_voronoi_planner/dynamicvoronoi/: dynamicvoronoi.h
student_code/002_SplinedVoronoiPlanner/pure_voronoi_planner/src/: compare_voronoi_results.cpp  dynamicvoronoi_interface.cpp  pure_voronoi_planner.cpp
student_code/002_SplinedVoronoiPlanner/pure_voronoi_planner/src/dynamicvoronoi/: bucketedqueue.cpp
student_code/002_SplinedVoronoiPlanner/splined_relaxed_a_star/: package.xml  splined_relaxed_a_star_planner_plugin.xml
student_code/002_SplinedVoronoiPlanner/splined_relaxed_a_star/config/: splined_relaxed_a_star.yaml
student_code/002_SplinedVoronoiPlanner/splined_relaxed_a_star/include/splined_relaxed_a_star/: base_bezier_spline.h  path_planner_types.h  ras_param_manager.h  splined_relaxed_a_star.h  visualization_helper.h
student_code/002_SplinedVoronoiPlanner/splined_relaxed_a_star/src/: cubic_bezier_spline.cpp  quintic_bezier_spline.cpp  ras_param_manager.cpp  splined_relaxed_a_star.cpp  visualization_helper.cpp
student_code/002_SplinedVoronoiPlanner/splined_voronoi_analysis/: CMakeLists.txt  README.md  package.xml  requirements.txt
student_code/002_SplinedVoronoiPlanner/splined_voronoi_analysis/config/mbf_config/: costmap_common_params.yaml  costmap_params.yaml  mbf_common_params.yaml
student_code/002_SplinedVoronoiPlanner/splined_voronoi_analysis/launch/: pure_voronoi_planner.launch  splined_voronoi.launch  turtlebot_gazebo.launch
student_code/002_SplinedVoronoiPlanner/splined_voronoi_analysis/scripts/: bagfile_examples.py  bagfile_helpers.py  compare_algorithms.py  compare_sra_and_voronoi.py  compare_voronoi.py  path_helpers.py  single_formation_path.py  spline_helpers.py
student_code/002_SplinedVoronoiPlanner/splined_voronoi_analysis/scripts/plan_caller/: generate_random_plans.py  random_plan_caller.py  specific_plan_caller.py
student_code/003_RedundancyRes/: Readme.md
student_code/004_ips_sensor_fusion/: README.md
student_code/007_FormationBuilder/: README.md
student_code/010_AMCL_Object_Geometries/: README.md
student_code/240101b_SplinedVoronoiPlanner/: README.md
student_code/240101b_SplinedVoronoiPlanner/splined_relaxed_a_star/: CMakeLists.txt  README.md
student_code/240101b_SplinedVoronoiPlanner/splined_relaxed_a_star/include/splined_relaxed_a_star/: cubic_bezier_spline.h  quintic_bezier_spline.h
student_code/240101b_SplinedVoronoiPlanner/splined_relaxed_a_star/launch/: mir_robot.launch  splined_relaxed_a_star_planner.launch
student_code/240101b_SplinedVoronoiPlanner/splined_relaxed_a_star/src/: base_bezier_spline.cpp
student_code/240101c_RedundancyRes/: Readme.md
student_code/240101e_Recursive-Least-Squares-Algorithm/: README.md
student_code/240101f_FormationLayer/: README.md
student_code/240101g_FormationBuilder/: README.md  package.xml
student_code/240410_FromPathplanerToBezierSpline/: README.md
student_code/241216_stabilizing_rough_terrain/: README.md  rampe v5.stl  rampe_gerade.stl  rampe_gerade_2.stl  rampe_improved.stl
student_code/250205_MultiCableRobotPlanner/cable_layer/: CMakeLists.txt  README.md  package.xml
student_code/250205_MultiCableRobotPlanner/cable_layer/action/: ExchangeCablePoints.action
student_code/250205_MultiCableRobotPlanner/cable_layer/cfg/: CableLayer.cfg
student_code/250205_MultiCableRobotPlanner/cable_layer/config/: cable_layer_plugin.xml
student_code/250205_MultiCableRobotPlanner/cable_layer/include/cable_layer/: cable_layer.h
student_code/250205_MultiCableRobotPlanner/cable_layer/src/: cable_layer.cpp  exchange_cable_points_client.cpp
student_code/250205_MultiCableRobotPlanner/multi_robot_planner/: CMakeLists.txt  README.md  package.xml
student_code/250205_MultiCableRobotPlanner/multi_robot_planner/include/multi_robot_planner/: global_planner_node.h
student_code/250205_MultiCableRobotPlanner/multi_robot_planner/launch/: global_planner_robots.launch
student_code/250205_MultiCableRobotPlanner/multi_robot_planner/msg/: RobotData.msg  RobotDataList.msg  ScoringMetric.msg  StartGoalPair.msg  StartGoalPairList.msg
student_code/250205_MultiCableRobotPlanner/multi_robot_planner/rviz/: mrp_multi_mir_visualization.rviz  mrp_single_mir_visualization.rviz
student_code/250205_MultiCableRobotPlanner/multi_robot_planner/src/: global_planner_node.cpp  main.cpp  start_goal_publisher_node.cpp  start_goal_publisher_node_1_robot.cpp  start_goal_publisher_node_2_robots.cpp  start_goal_publisher_node_3_robots.cpp  start_goal_publisher_node_4_robots.cpp  start_goal_publisher_node_6_robots.cpp  start_goal_publisher_node_6_robots_long_house.cpp  start_goal_publisher_node_6_robots_long_house_custom_order.cpp
student_code/250408_Dynamic_Model_for_mobile_robots/src/test_dynamic_model/: CMakeLists.txt  package.xml
student_code/250408_Dynamic_Model_for_mobile_robots/src/test_dynamic_model/launch/: huppel.launch  plainworld.launch
student_code/250408_Dynamic_Model_for_mobile_robots/src/test_dynamic_model/models/huppel/: model.config  model.sdf
student_code/250408_Dynamic_Model_for_mobile_robots/src/test_dynamic_model/models/huppel/media/: huppel.dae
student_code/250408_Dynamic_Model_for_mobile_robots/src/test_dynamic_model/models/unevenworld/: model.config  model.sdf
student_code/250408_Dynamic_Model_for_mobile_robots/src/test_dynamic_model/worlds/: huppel.world  unevenworld.world
(+418 files in other folders)
