<?xml version="1.0"?>
<package format="2">
  <name>pure_voronoi_planner</name>
  <version>0.0.0</version>
  <description>The pure_voronoi_planner package</description>
  <maintainer email="soenke.prophet@stud.uni-hannover.de">Sönke Prophet</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>nav_core</depend>
  <depend>libqhull</depend>
  <depend>splined_voronoi</depend>
  <depend>move_base_flex</depend>
  <depend>turtlebot3</depend>
  <depend>dynamic_reconfigure</depend>
  <export>
    <nav_core plugin="${prefix}/pure_voronoi_planner_plugin.xml" />
  </export>
</package>