<?xml version="1.0"?>
<package format="2">
  <name>splined_relaxed_a_star</name>
  <version>0.0.0</version>
  <description>The splined_relaxed_a_star package</description>
  <maintainer email="soenke.prophet@stud.uni-hannover.de">Sönke Prophet</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <depend>nav_core</depend>
  <depend>message_generation</depend>
  <export>
    <nav_core plugin="${prefix}/splined_relaxed_a_star_planner_plugin.xml" />
  </export>
</package>
