<?xml version="1.0"?>
<package format="2">
  <name>splined_voronoi_analysis</name>
  <version>0.0.0</version>
  <description>The splined_voronoi_analysis package</description>
  <maintainer email="soenke.prophet@stud.uni-hannover.de">Sönke Prophet</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>move_base_flex</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_navigation</depend>
  <depend>turtlebot3_description</depend>
  
</package>